--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="monetag" content="12cd88402ab708c511c50849455ff408">
   <title></title>
 </head>
 
 <body>
-  
+  <h1>i must buy benz</h1>
 </body>
 
 </html>
